@@ -745,6 +745,17 @@ CCC: Say something about the first shell command failing.  This might
 be due to a wrong setting of @code{tramp-rsh-end-of-line}.
 
 
+@item @option{plinkx}
+@cindex method plinkx
+@cindex plinkx method
+
+Another method using PuTTY on Windows.  Instead of host names, it
+expects PuTTY session names, calling @samp{plink -load @var{session}
+-t"}.  User names are relevant only in case the corresponding session
+hasn't defined a user name.  Different port numbers must be defined in
+the session.
+
+
 @item @option{fish}
 @cindex method fish
 @cindex fish method
